fix various misalignments and hackery and replace them with inline context styles

--- a/scss/_patterns_search-and-filter.scss
+++ b/scss/_patterns_search-and-filter.scss
@@ -47,8 +47,8 @@
       }
 
       .p-chip {
-        margin-bottom: $sp-x-small;
-        margin-top: $sp-x-small;
+        margin-bottom: $spv--x-small;
+        margin-top: $spv--x-small;
       }
 
       .p-search-and-filter__selected-count {
